[gd_scene load_steps=4 format=3 uid="uid://ba2vas0huqer0"]

[ext_resource type="Script" path="res://Main.gd" id="1_yrbud"]
[ext_resource type="PackedScene" uid="uid://rnaae6hc48qt" path="res://global_search/scn/header_search_bar/header_search_bar_container.tscn" id="2_hlfcm"]
[ext_resource type="PackedScene" uid="uid://cg0cn1n4bmmmi" path="res://global_search/scn/global_search_container/global_search_container.tscn" id="3_evlqi"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yrbud")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.482353, 0.733333, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Search on [b]Typesense[/b] for some ðŸ“š [b]Books[/b][/center]"
fit_content = true
scroll_active = false

[node name="HeaderSearchBarContainer" parent="VBoxContainer" instance=ExtResource("2_hlfcm")]
layout_mode = 2
size_flags_horizontal = 4

[node name="GlobalSearch" parent="." instance=ExtResource("3_evlqi")]
visible = false
layout_mode = 1

[connection signal="header_search_bar_clicked" from="VBoxContainer/HeaderSearchBarContainer" to="." method="_on_header_search_bar_container_header_search_bar_clicked"]
[connection signal="search_result_clicked" from="GlobalSearch" to="." method="_on_global_search_search_result_clicked"]
